--- a/app/styles/layout.module.scss
+++ b/app/styles/layout.module.scss
@@ -15,4 +15,14 @@ body.app {
   min-height: 100vh;
   min-height: 100svh;
   overflow-x: hidden;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
 }
