--- a/app/components/header/MobileHeader/mobileHeader.module.scss
+++ b/app/components/header/MobileHeader/mobileHeader.module.scss
@@ -1,8 +1,11 @@
+@import '@/app/styles/variables.module.scss';
+
 .mobileHeaderContainer {
   display: flex;
   padding: 50px 30px 0px;
   flex-direction: column;
   width: 100%;
+  position: relative;
 }
 
 .mobileHeaderInnerWrapper {
@@ -19,4 +22,62 @@
 
 .mobileLogo {
   width: 144px;
+}
+
+.mobileMenuBody {
+  width: 100%;
+  background-color: $background;
+  flex-direction: column;
+  position: absolute;
+  top: 100px;
+
+  transition: opacity 0.2s ease-in-out;
+
+  padding: 0px 30px 0px;
+}
+
+.mobileMenuBody_open {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.mobileMenuBody_close {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.mobileMenuTitle {
+  color: $white-color;
+  font-family: $dmSans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 112%;
+  max-width: 200px;
+  white-space: normal;
+}
+
+.mobileMenuTitle_compact {
+  max-width: 160px;
+}
+
+.mobileLinksListContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 19px;
+  list-style: none;
+  margin: 34px 0px;
+  padding: 0px;
+}
+
+.mobileLinksListContainer_li {
+  margin: 0px;
+
+  color: $white-color;
+
+  font-family: $dmSans;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
