--- a/app/components/header/HeaderCategory/headerCategory.module.scss
+++ b/app/components/header/HeaderCategory/headerCategory.module.scss
@@ -46,17 +46,24 @@
 
 .subMenuWrapper {
   position: absolute;
+  background-color: $background;
   width: 100%;
   border-top: 1px solid $white-color;
   left: 0px;
-  top: 120px;
-  padding-top: 65px;
+  top: 70px;
+  padding-top: 60px;
+  z-index: 2;
+  padding-bottom: 60px;
 
   display: flex;
   pointer-events: all;
   opacity: 1;
 
   transition: opacity 0.15s ease-in-out;
+
+  -webkit-box-shadow: 0px 7px 4px -2px rgba(0, 0, 0, 0.26);
+  -moz-box-shadow: 0px 7px 4px -2px rgba(0, 0, 0, 0.26);
+  box-shadow: 0px 7px 4px -2px rgba(0, 0, 0, 0.26);
 }
 
 .subMenuWrapper_closed {
