feat: product list

--- a/app/components/MainContent/mainContent.module.scss
+++ b/app/components/MainContent/mainContent.module.scss
@@ -3,5 +3,6 @@
 .mainContentContainer {
   display: flex;
   width: 100%;
-  max-width: $desktopContainer;
+  justify-content: center;
+  margin-top: 340px;
 }
