feat: product card component

--- a/app/components/header/BudgetButton/budgetButton.module.scss
+++ b/app/components/header/BudgetButton/budgetButton.module.scss
@@ -6,6 +6,12 @@
   outline: inherit;
 
   color: $white-color;
+  font-family: $dmSans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+
   display: flex;
   height: fit-content;
   align-items: center;
