--- a/app/components/ProductsList/productsList.module.scss
+++ b/app/components/ProductsList/productsList.module.scss
@@ -9,6 +9,7 @@
 
   @media (max-width: $mobile) {
     padding: 0px 24px;
+    margin-top: 30px;
   }
 }
 
@@ -43,20 +44,6 @@
     flex-direction: column;
     flex-wrap: nowrap;
     gap: 40px;
-  }
-}
-
-.placeHolder {
-  width: 376px;
-  height: 258px;
-  flex-shrink: 0;
-  border-radius: 10px;
-  background: $primary;
-
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-
-  @media (max-width: $mobile) {
-    width: 100%;
   }
 }
 
