--- a/app/components/header/DesktopHeader/desktopHeader.module.scss
+++ b/app/components/header/DesktopHeader/desktopHeader.module.scss
@@ -50,6 +50,12 @@
   cursor: pointer;
   transition: filter 0.2s ease-in-out;
 
+  font-family: $dmSans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
   &:hover {
     filter: brightness(0.8);
   }
