--- a/app/components/header/HeaderCategory/headerCategory.module.scss
+++ b/app/components/header/HeaderCategory/headerCategory.module.scss
@@ -17,6 +17,12 @@
   gap: 10px;
   align-items: center;
 
+  font-family: $dmSans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
   &:hover {
     filter: brightness(0.9);
   }
