--- a/app/components/header/MobileHeader/mobileHeader.module.scss
+++ b/app/components/header/MobileHeader/mobileHeader.module.scss
@@ -2,10 +2,13 @@
 
 .mobileHeaderContainer {
   display: flex;
-  padding: 50px 30px 0px;
+  padding: 50px 30px 10px;
   flex-direction: column;
   width: 100%;
-  position: relative;
+  // position: relative;
+  position: fixed;
+  background-color: $background;
+  z-index: 4;
 }
 
 .mobileHeaderInnerWrapper {
@@ -26,10 +29,13 @@
 
 .mobileMenuBody {
   width: 100%;
+  height: 100vh;
+  height: 100svh;
   background-color: $background;
   flex-direction: column;
-  position: absolute;
-  top: 100px;
+  position: fixed;
+  z-index: 3;
+  top: 95px;
 
   transition: opacity 0.2s ease-in-out;
 
